优化uavcan模块的构建

--- a/uavcan/can_drivers/st/canard/CMakeLists.txt
+++ b/uavcan/can_drivers/st/canard/CMakeLists.txt
@@ -1,6 +1,5 @@
 # Copyright (c) 2021 Teslabs Engineering S.L.
 # SPDX-License-Identifier: Apache-2.0
 
-if(CONFIG_UAVCAN_ENABLE)
-    add_subdirectory(uavcan)
-endif()
+zephyr_library_sources(canard_if.c)
+
