--- a/uavcan/can_drivers/st/CMakeLists.txt
+++ b/uavcan/can_drivers/st/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Copyright (c) 2021 Teslabs Engineering S.L.
 # SPDX-License-Identifier: Apache-2.0
 
-if(CONFIG_UAVCAN_ENABLE)
-    add_subdirectory(uavcan)
-endif()
+add_subdirectory(canard)
+zephyr_library_sources(stm32_can.c)
+
