增加cannode测试模块

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 if(CONFIG_UAVCAN_ENABLE)
-    add_subdirectory(uavcan)
+	add_subdirectory(uavcan)
+endif()
+if(CONFIG_CANOPEN)
+	add_subdirectory(canopen)
 endif()
